syntax = "proto3";

import "google/protobuf/timestamp.proto";

message schema {
  message SimpleRow {
    string simple_string = 1;
  };
  repeated SimpleRow a_array = 1;
  map<string, SimpleRow> b_map = 2;
  enum Number {
    ZERO = 0;
    ONE = 1;
    TWO = 2;
  };
  message Row {
    string a_string = 1;
    uint32 b_integer = 2;
    uint64 c_bigint = 3;
    double d_double = 4;
    float e_float = 5;
    bool f_boolean = 6;
    Number g_enum = 7;
    google.protobuf.Timestamp h_timestamp = 8;
    SimpleRow simple_row = 9;
  };
  Row c_row = 3;
}
